--- a/stomp-client-js/pom.xml
+++ b/stomp-client-js/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.projectodd.stilts</groupId>
     <artifactId>stilts</artifactId>
-    <version>0.1.40</version>
+    <version>0.1.40-AZAR</version>
   </parent>
 
   <groupId>org.projectodd.stilts</groupId>
@@ -105,6 +105,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <skip>true</skip>
           <failIfNoTests>false</failIfNoTests>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <systemProperties>
