--- a/conduit-jms/pom.xml
+++ b/conduit-jms/pom.xml
@@ -6,7 +6,7 @@
  <parent>
   <groupId>org.projectodd.stilts</groupId>
   <artifactId>stilts</artifactId>
-  <version>0.1.20-SNAPSHOT</version>
+  <version>0.1.40-AZAR2</version>
  </parent>
 
  <groupId>org.projectodd.stilts</groupId>
