--- a/conduit-server-spi/pom.xml
+++ b/conduit-server-spi/pom.xml
@@ -5,7 +5,7 @@
  <parent>
   <groupId>org.projectodd.stilts</groupId>
   <artifactId>stilts</artifactId>
-  <version>0.1.40-AZAR</version>
+  <version>0.1.40-AZAR2</version>
  </parent>
 
  <groupId>org.projectodd.stilts</groupId>
