--- a/stomp-api/pom.xml
+++ b/stomp-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.projectodd.stilts</groupId>
 		<artifactId>stilts</artifactId>
-		<version>0.1.40-AZAR2</version>
+		<version>0.1.40-scrible.2</version>
 	</parent>
 
 	<groupId>org.projectodd.stilts</groupId>
